feat: identity model and endpoints
